--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@ node_modules
 dist
 dist-ssr
 *.local
+tsconfig.tsbuildinfo
+.editorconfig
 
 # Editor directories and files
 .vscode/*
-!.vscode/extensions.json
+.vs/*
 .idea
 .DS_Store
 *.suo
