--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-	"@cavrnus/csc": "file:../cavrnus-app/modules/csc",
+	"@cavrnus/csc": "0.0.1",
     "http-status-codes": "^2.3.0",
     "pinia": "^2.0.23",
     "vite-plugin-vuetify": "^2.0.3",
