--- a/configs/app.config.json
+++ b/configs/app.config.json
@@ -1,7 +1,7 @@
 {
-    "apiEndpoint": "https://cav.dev.cavrn.us",
-    "domain": "cav",
+    "apiEndpoint": "https://cavrnus.cavrn.us",
+    "domain": "your-domain",
     "email": "",
     "password": "",
-	"roomId": "669bd7b6e3caa9d6ec9fe8f9"
+"roomId": ""
 }
