--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-	"clean": "rimraf ./dist && rimraf tsconfig.package.tsbuildinfo &&  rimraf tsconfig.build.tsbuildinfo &&  rimraf tsconfig.tsbuildinfo",
+    "clean": "rimraf ./dist && rimraf tsconfig.package.tsbuildinfo &&  rimraf tsconfig.build.tsbuildinfo &&  rimraf tsconfig.tsbuildinfo",
+    "clean-cache": "yarn cache clean && rimraf node_modules && rimraf yarn.locl",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cavrnus/csc": "^0.0.1",
+    "@cavrnus/csc": "^1.0.34",
     "@cavrnus/webrtc": "file:../cavrnus-app/modules/webrtc",
     "http-status-codes": "^2.3.0",
     "pinia": "^2.0.23",
@@ -21,9 +22,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "nyc": "^15.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
-	"nyc": "^15.0.0",
     "vue-tsc": "^2.0.24"
   }
 }
