--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cavrnus/csc": "^1.0.34",
-    "@cavrnus/webrtc": "file:../cavrnus-app/modules/webrtc",
+    "@cavrnus/csc": "^1.0.65",
+    "@cavrnus/webrtc": "^0.4.12",
     "http-status-codes": "^2.3.0",
     "pinia": "^2.0.23",
     "vite-plugin-vuetify": "^2.0.3",
