- Add checks for webrtc enabled to only load/connect if enabled - Default to dev when logging in as guest

--- a/configs/app.config.json
+++ b/configs/app.config.json
@@ -1,7 +1,8 @@
 {
-    "apiEndpoint": "https://cavrnus.cavrn.us",
+    "apiEndpoint": "https://cav.dev.cavrn.us",
     "domain": "your-domain",
     "email": "",
     "password": "",
-"roomId": ""
+	"roomId": "",
+	"webRtcEnabled": false
 }
