--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc -p tsconfig.build.json --noEmit && vite build",
     "clean": "rimraf ./dist && rimraf tsconfig.package.tsbuildinfo &&  rimraf tsconfig.build.tsbuildinfo &&  rimraf tsconfig.tsbuildinfo",
     "clean-cache": "yarn cache clean && rimraf node_modules && rimraf yarn.locl",
     "preview": "vite preview"
@@ -13,11 +13,13 @@
   "dependencies": {
     "@cavrnus/csc": "^1.1.1",
     "@cavrnus/webrtc": "^0.4.12",
+    "@mdi/font": "^7.4.47",
     "http-status-codes": "^2.3.0",
     "pinia": "^2.0.23",
     "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.31",
     "vue-router": "^4.4.0",
+    "vue3-toastify": "^0.2.4",
     "vuetify": "^3.6.13"
   },
   "devDependencies": {
